Add saled by area report endpoint
