# backend/hitas/views/reports.py
@@ -16,6 +16,7 @@ from hitas.services.housing_company import (
 from hitas.services.reports import (
     build_housing_company_state_report_excel,
     build_regulated_housing_companies_report_excel,
+    build_sales_by_postal_code_and_area_report_excel,
     build_sales_report_excel,
     build_unregulated_housing_companies_report_excel,
     sort_housing_companies_by_state,
@@ -95,3 +96,19 @@ class HousingCompanyStatesJSONReportView(ViewSet):
         ]
 
         return Response(data=data, status=status.HTTP_200_OK)
+
+
+class SalesByPostalCodeAndAreaReportView(ViewSet):
+    renderer_classes = [HitasJSONRenderer, ExcelRenderer]
+
+    def list(self, request: Request, *args, **kwargs) -> HttpResponse:
+        serializer = SalesReportSerializer(data=request.query_params)
+        serializer.is_valid(raise_exception=True)
+
+        start: datetime.date = serializer.validated_data["start_date"]
+        end: datetime.date = serializer.validated_data["end_date"]
+
+        sales = find_sales_on_interval_for_reporting(start, end)
+        workbook = build_sales_by_postal_code_and_area_report_excel(sales)
+        filename = f"Yhtiöt postinumero ja kalleusalueittain aikavälillä {start.isoformat()} - {end.isoformat()}.xlsx"
+        return get_excel_response(filename=filename, excel=workbook)
